iphone footer and scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 #root {
   height: 100%;
+
 }
 
 
@@ -10,6 +11,7 @@ html {
   height: 100%;
   margin:0;
   padding:0;
+
 }
 
 body {
@@ -18,6 +20,7 @@ body {
   flex-direction: column;
   margin:0;
   padding:0;
+ 
 }
 
 
@@ -74,6 +77,10 @@ body {
     right: 0;
     background: linear-gradient(to left, white, transparent);
   }
+
+  .min-h-screen-dvh {
+    min-height: 100dvh;
+  }
 }
 
 .gradient-border {
@@ -104,4 +111,18 @@ body {
   opacity: 1;
 }
 
+
+@media screen and (max-width: 767px) {
+  _::-webkit-full-page-media, _:future, :root .safari_only {
+    padding-bottom: 70px;
+  }
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
 
